--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,11 @@
 {% block title %} Home{% endblock title %}
 {% block body %}
 
-
 <!-- Header Start -->
-<div class="container-fluid header bg-primary p-0 mb-5" >
+<div class="container-fluid header bg-primary p-0 mb-5 " >
   <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
-    <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
-      <h1 class="display-6 text-white mb-5">Disease Prediction using Symptoms based on Machine Learning in Python</h1>
+    <div class="col-lg-7 p-5 wow fadeIn" data-wow-delay="0.1s" >
+      <h1 class="display-6 text-white mb-4" >Disease Prediction using Symptoms based on Machine Learning in Python</h1>
       <div class="row g-4">
         <div class="col-sm-4">
           <div class="border-start border-light ps-4">
@@ -28,8 +27,20 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-6 pt-4">
+          <div class="">
+            <h4 class="text-white mb-1" >Project By :</h4>
+           <!--  <p class="text-light mb-0">Expert Doctors</p> -->
+            <ul class="text-white mb-1">
+              <li><h5 class="text-white mb-1"> Name 1</h5></li>
+              <li><h5 class="text-white mb-1"> Name 2</h5></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+    <div class="col-lg-5 wow fadeIn" data-wow-delay="0.5s">
       <div class="owl-carousel header-carousel" >
         <div class="owl-carousel-item position-relative">
           <img class="img-fluid" src="static/img/img-2.png" alt="">
@@ -57,26 +68,26 @@
 
 
 <!-- About Start -->
-<div class="container-xxl py-5">
+<div class="container-xxl py-4">
   <div class="container">
     <div class="row g-5">
-      <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+      <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="d-flex flex-column">
-          <img class="img-fluid rounded w-75 align-self-end" src="static/img/about-1.jpg" alt="">
-          <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="static/img/about-2.jpg" alt=""
-            style="margin-top: -25%;">
+          <img class="img-fluid rounded w-100 align-self-end" src="static/img/img-1.png" alt="">
+          <!-- <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="static/img/aboutus.jpg" alt=""  style="margin-top: -25%;"> -->
         </div>
       </div>
-      <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+      <div class="col-lg-7 wow fadeIn" data-wow-delay="0.5s">
         <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
-        <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et
-          lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-        <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam
-          ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
-        <p><i class="far fa-check-circle text-primary me-3"></i>Quality health care</p>
-        <p><i class="far fa-check-circle text-primary me-3"></i>Only Qualified Doctors</p>
-        <p><i class="far fa-check-circle text-primary me-3"></i>Medical Research Professionals</p>
+        <!-- <h1 class="mb-4">Objective</h1> -->
+        <p>The project aims to develop a machine learning-based system to predict diseases based on user-reported symptoms. By leveraging algorithms like Random Forest, Naive Bayes, and Support Vector Machine (SVM), the system will classify diseases with high accuracy and assist in early diagnosis, improving healthcare outcomes.</p>
+        <p class="mb-4">Our vision is to transform healthcare by making advanced technology an integral part of everyday diagnosis and treatment. 
+          </p>
+          <p>Our mission is to bridge the gap between technology and healthcare by developing intelligent solutions that enhance medical diagnosis and decision-making.</p>
+        <!-- <h6>Scope of the Project</h6> -->
+        <p><i class="far fa-check-circle text-primary me-3"></i>Healthcare Applications: Assists doctors and patients in early diagnosis.</p>
+        <p><i class="far fa-check-circle text-primary me-3"></i>Scalable Framework: Can be extended to include more diseases and symptoms.</p>
+        <p><i class="far fa-check-circle text-primary me-3"></i>Educational Tool: Useful for students and researchers to understand the applications of machine learning in healthcare.</p>
         <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
       </div>
     </div>
@@ -85,157 +96,29 @@
 <!-- About End -->
 
 
-<!-- Service Start -->
-<div class="container-xxl py-5">
-  <div class="container">
-    <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-      <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
-      <h1>Health Care Solutions</h1>
-    </div>
-    <div class="row g-4">
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-heartbeat text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Cardiology</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-x-ray text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Pulmonary</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-brain text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Neurology</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-wheelchair text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Orthopedics</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-tooth text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Dental Surgery</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="service-item bg-light rounded h-100 p-5">
-          <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
-            style="width: 65px; height: 65px;">
-            <i class="fa fa-vials text-primary fs-4"></i>
-          </div>
-          <h4 class="mb-3">Laboratory</h4>
-          <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.
-          </p>
-          <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
-        </div>
-      </div>
-    </div>
+
+<div class="container">
+  <div class="text-start mx-auto mb-0 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 100%">
+    <p class="d-inline-block border rounded-pill py-1 px-4">Algorithms</p>
+    <!-- <h1>Health Care Solutions</h1> -->
   </div>
 </div>
-<!-- Service End -->
-
 
 <!-- Feature Start -->
-<div class="container-fluid bg-primary overflow-hidden my-5 px-lg-0">
+<div class="container-fluid bg-primary overflow-hidden my-4 px-lg-0" style="height: 400px;">
   <div class="container feature px-lg-0">
     <div class="row g-0 mx-lg-0">
-      <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
+      <div class="col-lg-4 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="p-lg-5 ps-lg-0">
-          <p class="d-inline-block border rounded-pill text-light py-1 px-4">Features</p>
-          <h1 class="text-white mb-4">Why Choose Us</h1>
-          <p class="text-white mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
-            diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-          <div class="row g-4">
-            <div class="col-6">
-              <div class="d-flex align-items-center">
-                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                  style="width: 55px; height: 55px;">
-                  <i class="fa fa-user-md text-primary"></i>
-                </div>
-                <div class="ms-4">
-                  <p class="text-white mb-2">Experience</p>
-                  <h5 class="text-white mb-0">Doctors</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="d-flex align-items-center">
-                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                  style="width: 55px; height: 55px;">
-                  <i class="fa fa-check text-primary"></i>
-                </div>
-                <div class="ms-4">
-                  <p class="text-white mb-2">Quality</p>
-                  <h5 class="text-white mb-0">Services</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="d-flex align-items-center">
-                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                  style="width: 55px; height: 55px;">
-                  <i class="fa fa-comment-medical text-primary"></i>
-                </div>
-                <div class="ms-4">
-                  <p class="text-white mb-2">Positive</p>
-                  <h5 class="text-white mb-0">Consultation</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="d-flex align-items-center">
-                <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                  style="width: 55px; height: 55px;">
-                  <i class="fa fa-headphones text-primary"></i>
-                </div>
-                <div class="ms-4">
-                  <p class="text-white mb-2">24 Hours</p>
-                  <h5 class="text-white mb-0">Support</h5>
-                </div>
-              </div>
-            </div>
-          </div>
+          <p class="d-inline-block border rounded-pill text-light py-1 px-4">Accuracy</p>
+          <h3 class="text-white mb-4">Machine Learning Algorithms</h3>
+          <p class="text-white mb-4 pb-2">Implement and compare three machine learning algorithms: Random Forest, Naive Bayes, and SVM. </p>
+          
         </div>
       </div>
-      <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
+      <div class="col-lg-8 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" >
         <div class="position-relative h-100">
-          <img class="position-absolute img-fluid w-100 h-100" src="static/img/feature.jpg" style="object-fit: cover;"
+          <img class="position-absolute img-fluid w-100 h-100 "   src="static/img/Disease_Prediction_Accuracy.jpg" style="object-fit: fill;"
             alt="">
         </div>
       </div>
@@ -243,84 +126,6 @@
   </div>
 </div>
 <!-- Feature End -->
-
-
-<!-- Team Start -->
-<div class="container-xxl py-5">
-  <div class="container">
-    <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-      <p class="d-inline-block border rounded-pill py-1 px-4">Doctors</p>
-      <h1>Our Experience Doctors</h1>
-    </div>
-    <div class="row g-4">
-      <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="team-item position-relative rounded overflow-hidden">
-          <div class="overflow-hidden">
-            <img class="img-fluid" src="static/img/team-1.jpg" alt="">
-          </div>
-          <div class="team-text bg-light text-center p-4">
-            <h5>Doctor Name</h5>
-            <p class="text-primary">Department</p>
-            <div class="team-social text-center">
-              <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-        <div class="team-item position-relative rounded overflow-hidden">
-          <div class="overflow-hidden">
-            <img class="img-fluid" src="static/img/team-2.jpg" alt="">
-          </div>
-          <div class="team-text bg-light text-center p-4">
-            <h5>Doctor Name</h5>
-            <p class="text-primary">Department</p>
-            <div class="team-social text-center">
-              <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="team-item position-relative rounded overflow-hidden">
-          <div class="overflow-hidden">
-            <img class="img-fluid" src="static/img/team-3.jpg" alt="">
-          </div>
-          <div class="team-text bg-light text-center p-4">
-            <h5>Doctor Name</h5>
-            <p class="text-primary">Department</p>
-            <div class="team-social text-center">
-              <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-        <div class="team-item position-relative rounded overflow-hidden">
-          <div class="overflow-hidden">
-            <img class="img-fluid" src="static/img/team-4.jpg" alt="">
-          </div>
-          <div class="team-text bg-light text-center p-4">
-            <h5>Doctor Name</h5>
-            <p class="text-primary">Department</p>
-            <div class="team-social text-center">
-              <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Team End -->
 
 
 <!-- Appointment Start -->
