--- a/templates/predict.html
+++ b/templates/predict.html
@@ -153,7 +153,7 @@
                                 treatment.</p>
                         </div>
                         <div class="row text-center justify-content-center">
-                            <div class="col-12 col-sm-12 py-3">
+                            <div class="col-12 col-sm-12 py-2">
                                 <button type="button" class="btn btn-primary btn-lg w-100 mt-3 rounded-pill">Book
                                     Appointment</button>
                             </div>
@@ -195,9 +195,9 @@
 <!-- About End -->
 
 {% if final_prediction %}
-<div class="row text-center">
+<div class="row text-center"  style="display: none;">
     <p class="text-dark mt-3">Our Prediction is:- <b class="text-danger"> {{ final_prediction }} </b></p>
 </div>
-
 {% endif %}
+
 {% endblock body %}
