added channel name

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,26 +80,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="/" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Prediction History</a>
-                <div class="nav-item dropdown">
+                <a href="/sign_up" class="nav-item nav-link" style="text-transform: none;font-weight: 500;"><i class="fa fa-arrow-up mx-0"></i> Sign Up</a>
+                <a href="/" class="nav-item nav-link active" style="font-weight: 600">Home</a>
+                <a href="https://github.com/caliber123-dot/Disease-Prediction-Project" target="_blank" class="nav-item nav-link">Code</a>
+                <a href="contact.html" class="nav-item nav-link">Report</a>
+                <a href="contact.html" class="nav-item nav-link">PPT</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <!-- <a href="feature.html" class="dropdown-item">Feature</a> -->
                         <a href="team.html" class="dropdown-item">Our Doctor</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="appointment.html" class="dropdown-item">Time Table</a>
                         <a href="appointment.html" class="dropdown-item">Sign Up</a>
                         <a href="appointment.html" class="dropdown-item">Login</a>
-
-                        <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div> -->
+               
+                <a href="service.html" class="nav-item nav-link">Prediction History</a>
             </div>
-            <a href="/predict" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Prediction<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <a href="/predict" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Prediction
+                <i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
