--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
           <!-- <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="static/img/aboutus.jpg" alt=""  style="margin-top: -25%;"> -->
         </div>
       </div>
-      <div class="col-lg-7 wow fadeIn" data-wow-delay="0.5s">
+      <div class="col-lg-7 wow fadeIn text-dark" data-wow-delay="0.5s">
         <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
         <!-- <h1 class="mb-4">Objective</h1> -->
         <p>The project aims to develop a machine learning-based system to predict diseases based on user-reported symptoms. By leveraging algorithms like Random Forest, Naive Bayes, and Support Vector Machine (SVM), the system will classify diseases with high accuracy and assist in early diagnosis, improving healthcare outcomes.</p>
