--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -6,40 +6,57 @@
 
 <div class="container-xxl py-3" style="background-color: #cde8ff;">
     <div class="container">
+        <div class="row text-end" >
+                <!-- <p> Logged out successfully. </p> -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            
+                {% for category, message in messages %}
+                <p class="{{ category }}">{{ message }}</p>
+                {% endfor %}
+            
+            {% endif %}
+            {% endwith %}
+        </div>
+        
         <div class="row g-5">
-            <div class="col-lg-6 wow1 fadeIn1" data-wow-delay="0.5s" style="background-image: url('static/img/signup-bg.jpg');background-size: cover;min-height: 200px;">
-                
+            <div class="col-lg-6 wow1 fadeIn1" data-wow-delay="0.5s"
+                style="background-image: url('static/img/signup-bg.jpg');background-size: cover;min-height: 200px;">
+
             </div>
             <div class="col-lg-6 wow fadeIn bg-light" data-wow-delay="0.5s">
-                <form action="/sign_up" method="POST">
+                <form action="/sign_in" method="POST">
                     <div class="bg-light h-100 d-flex pt-4">
-                        <div class="container">
+                        <div class="container text-dark">
                             <div class="row">
                                 <h4 class="mb-2 text-primary">Login Here</h4>
                                 <hr class="p-0">
                                 <span class="pb-2">
                                     Didn't you account yet ? <a href="/sign_up">Register Here</a>
-                                  </span>
-                                  {% if msg %}
-                                    <p class="text-dark mt-3"><b class="text-danger"> {{ msg }} </b></p>
+                                </span>
+                                {% if msg %}
+                                <p class="text-dark mt-3"><b class="text-danger"> {{ msg }} </b></p>
                                 {% endif %}
                             </div>
-                            
+
                             <div class="row pb-4 mt-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Email" name="txtemail">
-                                  </div>
+                                    <input type="text" required class="form-control border-1 p-3"
+                                        placeholder="Your Email" name="txtemail">
+                                </div>
                             </div>
-                            
+
                             <div class="row pb-4">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Password" name="txtpsw">
-                                  </div>
-                            </div>                            
-                            
+                                    <input type="password" required class="form-control border-1 p-3" placeholder="Password"
+                                        name="txtpsw">
+                                </div>
+                            </div>
+
                             <div class="row text-center justify-content-center">
                                 <div class="col-12 col-sm-12 py-3">
-                                    <button type="submit" class="btn btn-primary btn-lg w-100 mt-1 rounded-pill">LOGIN</button>
+                                    <button type="submit"
+                                        class="btn btn-primary btn-lg w-100 mt-1 rounded-pill">LOGIN</button>
                                 </div>
                             </div>
                         </div>
@@ -52,7 +69,7 @@
 <!-- About End -->
 
 {% if msg %}
-<div class="container text-center"  style="display: block;">
+<div class="container text-center" style="display: block;">
     <p class="text-dark mt-3"><b class="text-danger"> {{ msg }} </b></p>
 </div>
 {% endif %}
