--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -5,7 +5,7 @@
 <!-- About Start -->
 
 <div class="container-xxl py-3" style="background-color: #cde8ff;">
-    <div class="container">
+    <div class="container text-dark">
         <div class="row g-5">
             <div class="col-lg-6 wow1 fadeIn1" data-wow-delay="0.5s" style="background-image: url('static/img/signup-bg.jpg');background-size: cover;min-height: 200px;">
                 
@@ -26,22 +26,22 @@
                             </div>
                             <div class="row pb-3 py-2">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Name" name="txtname">
+                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Name" name="txtname" value="{{ txtname or '' }}">
                                   </div>
                             </div>
                             <div class="row pb-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Email" name="txtemail">
+                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Email" name="txtemail" value="{{ txtemail or '' }}">
                                   </div>
                             </div>
                             <div class="row pb-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Phone" name="txtphone">
+                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Phone" name="txtphone" value="{{ txtphone or '' }}">
                                   </div>
                             </div>
                             <div class="row pb-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Password" name="txtpsw">
+                                    <input type="password" required class="form-control border-1 p-2" placeholder="Password" name="txtpsw">
                                   </div>
                             </div>                            
                             <div class="row">
