--- a/templates/1.html
+++ b/templates/1.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <!-- <title>Klinik - Clinic Website Template</title> -->
-    <title> {% block title %} {% endblock title %} - Caliber</title>
+    <title>  Home - Caliber</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -25,14 +26,16 @@
 
     <!-- Libraries Stylesheet -->
     <!-- static -->
-    <link href="{{ url_for('static', filename='lib/animate/animate.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='lib/owlcarousel/assets/owl.carousel.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css') }}"
-        rel="stylesheet">
+    <link href="static/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="static/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Template Stylesheet -->
+    <link href="static/css/style.css" rel="stylesheet">
+    
     <!-- Bootstrap Table CSS -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.css">
     <style>
@@ -64,6 +67,30 @@
     </div>
     <!-- Spinner End -->
 
+
+    <!-- Topbar Start -->
+    <!-- <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3">
+
+                </div>
+            </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small>+012 345 6789</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <p class="mb-2"><i class="fa fa-envelope me-3 text-primary"></i>info@example.com</p>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- Topbar End -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -100,9 +127,76 @@
     </nav>
     <!-- Navbar End -->
 
-    {% block body %}
+    
 
-    {% endblock body %}
+<!-- Appointment Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <p class="d-inline-block border rounded-pill py-1 px-4">Appointment</p>
+                <h1 class="mb-4">Draft An Appointment To Visit Doctor</h1>
+                <p class="mb-4">Our team is here to provide you with exceptional care tailored to your needs. Booking an appointment with our experienced doctor is simple and convenient. Whether you require a routine check-up, follow-up consultation, or assistance with a specific health concern, we are ready to help.</p>
+                <div class="bg-light rounded d-flex align-items-center p-5 mb-4">
+                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
+                        style="width: 55px; height: 55px;">
+                        <i class="fa fa-phone-alt text-primary"></i>
+                    </div>
+                    <div class="ms-4">
+                        <p class="mb-2">Call Us Now</p>
+                        <h5 class="mb-0">800-225-0241</h5>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="bg-light rounded h-100 d-flex align-items-center p-5">
+                    <form>
+                        <div class="row g-3">
+                            <div class="col-12 col-sm-12">
+                                <input type="text" class="form-control border-1 p-2" placeholder="Your Name"
+                                    >
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="email" class="form-control border-1 p-2" placeholder="Your Email"
+                                    >
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" class="form-control border-1 p-2" placeholder="Your Mobile"
+                                    >
+                            </div>
+                            
+                            <div class="col-12 col-sm-6">
+                                <div class="date" id="date" data-target-input="nearest">
+                                    <input type="text" class="form-control border-1 p-2 datetimepicker-input"
+                                        placeholder="Choose Date" data-target="#date" data-toggle="datetimepicker"
+                                        >
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="time" id="time" data-target-input="nearest">
+                                    <input type="text" class="form-control border-1 p-2 datetimepicker-input"
+                                        placeholder="Choose Time" data-target="#time" data-toggle="datetimepicker"
+                                        >
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <textarea class="form-control border-1" rows="3"
+                                    placeholder="Describe your problem"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-2" type="submit">Draft Appointment</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Appointment End -->
+
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-0 pt-0 wow fadeIn" data-wow-delay="0.1s">
@@ -176,22 +270,20 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="{{ url_for('static', filename='lib/wow/wow.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/easing/easing.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/waypoints/waypoints.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/counterup/counterup.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/owlcarousel/owl.carousel.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/tempusdominus/js/moment.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/tempusdominus/js/moment-timezone.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js') }}"></script>
+    <script src="static/lib/wow/wow.min.js"></script>
+    <script src="static/lib/easing/easing.min.js"></script>
+    <script src="static/lib/waypoints/waypoints.min.js"></script>
+    <script src="static/lib/counterup/counterup.min.js"></script>
+    <script src="static/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="static/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="static/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="static/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Bootstrap Table JS -->
     <script src="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.js"></script>
 
     <!-- Template Javascript -->
-    <!-- <script src="static/js/main.js"></script> -->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="static/js/main.js"></script>
 </body>
 
 </html>
