--- a/templates/history.html
+++ b/templates/history.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 {% block title %} Home{% endblock title %}
 {% block body %}
-<div class="container-xxl py-3" style="background-color: #cde8ff;">
 
-    <div class="container my-3 bg-light p-5">
-        <h4 class="mb-3 text-primary">
+<div class="container-xxl py-3" style="background-color: #cde8ff;">
+    <div class="container my-0 bg-light p-5">
+        <div class="row text-end">
+
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-            
-                {% for category, message in messages %}
-                {{ message }}
-                {% endfor %}
-            
+
+            {% for category, message in messages %}
+            <p class="{{ category }}">{{ message }}</p>
+            {% endfor %}
+
             {% endif %}
             {% endwith %}
-            Prediction History:</h4>
+        </div>
+        <h4 class="mb-0 text-primary">{{msg}}</h4>
 
         {% if allTodo|length == 0 %}
 
@@ -22,10 +24,12 @@
             No record found. Add your first prediction now!
         </div>
         {% else %}
-        <table class="table text-dark table-bordered border-0 table-hover">
-            <thead >
+
+        <table id="table" class="table table-striped" data-toggle="table" data-sortable="true" data-pagination="true"
+            data-page-size="5" data-search="true" style="font-size: 14px;">
+            <thead class="text-light bg-primary ">
                 <tr>
-                    <th scope="col">S.No</th>
+                    <th data-sortable="true" scope="col">S.No</th>
                     <th scope="col">Date</th>
                     <th scope="col">Symptoms</th>
                     <th scope="col">Disease</th>
@@ -37,14 +41,14 @@
                 {% for todo in allTodo %}
                 <tr style="color: black;">
                     <!-- {{loop.title}} -->
-                    <th scope="row">{{loop.index}}</th>
+                    <th scope="row">{{ loop.revindex }}</th>
                     <td>{{ todo.pr_date.strftime('%d-%m-%Y %H:%M:%S') }}</td>
                     <td>{{todo.pr_symptoms}}</td>
                     <td>{{todo.pr_disease}}</td>
                     <td>
-                        <a href="/update/{{todo.pr_id}}" type="button"
-                            class="btn btn-outline-success btn-sm mx-1">Appointment</button>
-                            
+                        <!-- <a href="/appoint?aa={{todo.pr_id}}" class="btn btn-outline-success btn-sm mx-1">Appointment</a> -->
+                        <a href="/appoint/{{todo.pr_id}}" type="button"
+                            class="btn btn-outline-success btn-sm mx-1">Appointment</a>
                     </td>
                 </tr>
 
@@ -58,9 +62,6 @@
 
 </div>
 
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-    crossorigin="anonymous"></script>
+
 
 {% endblock body %}
