--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
   </div>
 </div>
 
-<!-- Feature Start -->
+<!-- Algorithm Start -->
 <div class="container-fluid bg-primary overflow-hidden my-4 px-lg-0" style="height: 400px;">
   <div class="container feature px-lg-0">
     <div class="row g-0 mx-lg-0">
@@ -125,7 +125,30 @@
     </div>
   </div>
 </div>
-<!-- Feature End -->
+<!-- Algorithm End -->
+
+<!-- Dataset balanced  Start -->
+<div class="container-fluid bg-primary overflow-hidden my-5 px-lg-0" style="height: 400px;">
+  <div class="container feature px-lg-0">
+    <div class="row g-0 mx-lg-0">
+      <div class="col-lg-4 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="p-lg-5 ps-lg-0">
+          <p class="d-inline-block border rounded-pill text-light py-1 px-4">Reading the dataset</p>
+          <h3 class="text-white mb-4">Prediction Disease</h3>
+          <p class="text-white mb-4 pb-2">We will be using a bar plot, to check whether the dataset is balanced or not. </p>
+          
+        </div>
+      </div>
+      <div class="col-lg-8 pe-lg-0 wow fadeIn bg-white" data-wow-delay="0.5s" >
+        <div class="position-relative h-100">
+          <img class="position-absolute img-fluid w-100 h-100 "   src="static/img/balancedata.png" style="object-fit: fill;"
+            alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Algorithm End -->
 
 
 <!-- Appointment Start -->
