--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1402,8 +1402,8 @@
                         </div>
                         <div class="row text-center justify-content-center">
                             <div class="col-12 col-sm-12 py-2">
-                                <button type="button" class="btn btn-primary btn-lg w-100 mt-3 rounded-pill">Book
-                                    Appointment</button>
+                                <a href="/history" class="btn btn-primary btn-lg w-100 mt-3 rounded-pill">Book
+                                    Appointment</a>
                             </div>
                             <div class="row text-start">
                                 <table class="table table-bordered text-dark">
