added channel name

--- a/templates/ppt.html
+++ b/templates/ppt.html
@@ -29,8 +29,11 @@
 </style>
 
 <div class="container-xxl py-3" style="background-color: #cde8ff;">
-    <div class="container bg-light1">
-        <div class="responsive-iframe-container mt-5 mb-5">
+    <div class="container text-center">
+        <h4><u>PowerPoint</u></h4>
+    </div>
+    <div class="container">
+        <div class="responsive-iframe-container mt-0 mb-5">
             <iframe style="border: #ddd solid 5px;"
                 src="https://1drv.ms/p/c/f7bcf1f0fc4c4a13/IQSdc1P6zrCcQqJ-5Sm4E--bAf_4_5dGQwsRK10RZCbGqao?em=2&amp;wdAr=1.7777777777777777"
                 allowfullscreen>
