--- a/templates/report.html
+++ b/templates/report.html
@@ -28,8 +28,11 @@
     }
 </style>
 <div class="container-xxl py-3" style="background-color: #cde8ff;">
+    <div class="container text-center">
+    <h4><u>Report</u></h4>
+    </div>
     <div class="container">
-        <div class="responsive-iframe-container mt-5 mb-5">
+        <div class="responsive-iframe-container mt-0 mb-5">
             <iframe style="border: #ddd solid 5px;"
                 src="https://1drv.ms/b/c/f7bcf1f0fc4c4a13/IQTNLRjPjs4mQqavqyZPBqIOAe5BaWN3zYVQSwqgkNfMDoY"
                 allowfullscreen>
