--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -31,12 +31,12 @@
                             </div>
                             <div class="row pb-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Email" name="txtemail" value="{{ txtemail or '' }}">
+                                    <input type="email" required class="form-control border-1 p-2" placeholder="Your Email" name="txtemail" value="{{ txtemail or '' }}">
                                   </div>
                             </div>
                             <div class="row pb-3">
                                 <div class="col-12 col-sm-12">
-                                    <input type="text" required class="form-control border-1 p-2" placeholder="Your Phone" name="txtphone" value="{{ txtphone or '' }}">
+                                    <input type="text" maxlength="10" required class="form-control border-1 p-2" placeholder="Your Phone" name="txtphone" value="{{ txtphone or '' }}">
                                   </div>
                             </div>
                             <div class="row pb-3">
