--- a/templates/history.html
+++ b/templates/history.html
@@ -16,7 +16,7 @@
             {% endif %}
             {% endwith %}
         </div>
-        <h4 class="mb-0 text-primary">{{msg}}</h4>
+        <h4 class="mb-0 text-primary"><span style="color: #444;">{{msg}}</span> Prediction History:</h4>
 
         {% if allTodo|length == 0 %}
 
