--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,8 @@
             <ul class="text-white mb-1">
               <li><h5 class="text-white mb-1"> Diksha Chaurpagar</h5></li>
               <li><h5 class="text-white mb-1"> Vaishnavi Nikose</h5></li>
+              <li><h5 class="text-white mb-1"> Prachi Mahesh kaware</h5></li>
+              <li><h5 class="text-white mb-1"> Pragati kumbhare</h5></li>
             </ul>
           </div>
         </div>
