--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <!-- <title>Klinik - Clinic Website Template</title> -->
+    <meta charset="utf-8">    
     <title> {% block title %} {% endblock title %} - Caliber</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
@@ -67,7 +66,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>BCA-Project</h1>
+            <h2 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>Disease-Prediction-System</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
