--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,10 @@
             <h4 class="text-white mb-1" >Project By :</h4>
            <!--  <p class="text-light mb-0">Expert Doctors</p> -->
             <ul class="text-white mb-1">
-              <li><h5 class="text-white mb-1"> Diksha Chaurpagar</h5></li>
-              <li><h5 class="text-white mb-1"> Vaishnavi Nikose</h5></li>
-              <li><h5 class="text-white mb-1"> Prachi Mahesh kaware</h5></li>
-              <li><h5 class="text-white mb-1"> Pragati kumbhare</h5></li>
+              <li><h5 class="text-white mb-1"> Diksha Premdas Chaurpagar</h5></li>
+              <li><h5 class="text-white mb-1"> Vaishnavi Baban Nikose</h5></li>
+              <li><h5 class="text-white mb-1"> Pragati Ramesh kumbhare</h5></li>
+              <li><h5 class="text-white mb-1"> Prachi Mahesh kaware</h5></li>
             </ul>
           </div>
         </div>
