--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
                 <a href="/" class="nav-item nav-link active" style="font-weight: 600">Home</a>
                 <a href="https://github.com/caliber123-dot/Disease-Prediction-Project" target="_blank"
                     class="nav-item nav-link">Code</a>
-                <a href="/ppt" class="nav-item nav-link">PPT</a>
-                <a href="/report" class="nav-item nav-link">Report</a>
+                <!-- <a href="/ppt" class="nav-item nav-link">PPT</a> -->
+                <!-- <a href="/report" class="nav-item nav-link">Report</a> -->
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
