--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6 pt-4">
-          <div class="">
+          <div class="" style="display: none;">
             <h4 class="text-white mb-1" >Project By :</h4>
            <!--  <p class="text-light mb-0">Expert Doctors</p> -->
             <ul class="text-white mb-1">
